--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
             </div>
         </section>
 
+        <!-- Galeria -->
+        <section class="galeria">
+            <div class="titulo-galeria">
+                <h2>Galerie de photos</h2>
+                <p>Découvrez quelques moments spéciaux de notre projet.</p>
+            </div>
+                <div class="container-galeria">
+                    <img src="img/violino-imagem.jpg" alt="Violon 1">
+                    <img src="img/violino-imagem.jpg" alt="Violon 2">
+                    <img src="img/violino-imagem.jpg" alt="Violon 3">
+                    <img src="img/violino-imagem.jpg" alt="Violon 4">
+                    <img src="img/violino-imagem.jpg" alt="Violon 5">
+                </div>
+            </section>
+
         <!--- Nossa equipe --->
         <section class="equipe">
             <div class="titulo-equipe">
